--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL=https://furnishop-14.preview.emergentagent.com
+VITE_BACKEND_URL=http://localhost:5000
 WDS_SOCKET_PORT=443
 ENABLE_HEALTH_CHECK=false
